--- a/app/src/main/res/layout/fragment_enter_code.xml
+++ b/app/src/main/res/layout/fragment_enter_code.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".fragments.screens.EnterCodeFragment">
+    tools:context=".ui.screens.EnterCodeFragment">
 
     <TextView
         android:id="@+id/register_text_enter_code"
