--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -34,7 +34,7 @@
         android:id="@+id/profile_exit_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Выйти"
+        android:text="@string/profile_exit_btn_text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
