Add track location and ui pay method.

--- a/app/src/main/res/layout/fragment_enter_code.xml
+++ b/app/src/main/res/layout/fragment_enter_code.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:textStyle="bold"
         android:gravity="center"
+        android:textSize="40sp"
         android:text="Код"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
