--- a/app/src/main/res/layout/fragment_pay_method.xml
+++ b/app/src/main/res/layout/fragment_pay_method.xml
@@ -3,8 +3,117 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.screens.PayMethodFragment">
 
+    <View
+        style="@style/underline_style"
+        app:layout_constraintBottom_toTopOf="@+id/pay_method_text_view_cash"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_cash"
+        app:layout_constraintTop_toTopOf="@id/pay_method_text_view_cash"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/pay_method_text_view_cash"
+        app:layout_constraintBottom_toBottomOf="@id/pay_method_text_view_cash"/>
+
+    <TextView
+        android:id="@+id/pay_method_text_view_cash"
+        style="@style/text_view_pay_method_style"
+        android:layout_marginTop="20dp"
+        android:text="Наличные"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <RadioButton
+        android:id="@+id/pay_method_radio_btn_cash"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="@+id/pay_method_text_view_cash"
+        app:layout_constraintEnd_toEndOf="@+id/pay_method_text_view_cash"
+        app:layout_constraintTop_toTopOf="@+id/pay_method_text_view_cash" />
+
+    <View
+        style="@style/underline_style"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/pay_method_text_view_cash" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_google_pay"
+        app:layout_constraintTop_toTopOf="@id/pay_method_text_view_g_pay"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/pay_method_text_view_g_pay"
+        app:layout_constraintBottom_toBottomOf="@id/pay_method_text_view_g_pay"/>
+
+    <TextView
+        android:id="@+id/pay_method_text_view_g_pay"
+        style="@style/text_view_pay_method_style"
+        android:text="Google pay"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/pay_method_text_view_cash" />
+
+    <RadioButton
+        android:id="@+id/pay_method_radio_btn_g_pay"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="@+id/pay_method_text_view_g_pay"
+        app:layout_constraintEnd_toEndOf="@+id/pay_method_text_view_g_pay"
+        app:layout_constraintTop_toTopOf="@+id/pay_method_text_view_g_pay" />
+
+    <View
+        style="@style/underline_style"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/pay_method_text_view_g_pay" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_credit_card"
+        app:layout_constraintTop_toTopOf="@id/pay_method_text_view_card"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/pay_method_text_view_card"
+        app:layout_constraintBottom_toBottomOf="@id/pay_method_text_view_card"/>
+
+    <TextView
+        android:id="@+id/pay_method_text_view_card"
+        style="@style/text_view_pay_method_style"
+        android:text="Карта"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/pay_method_text_view_g_pay" />
+
+    <RadioButton
+        android:id="@+id/pay_method_radio_btn_card"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="@+id/pay_method_text_view_card"
+        app:layout_constraintEnd_toEndOf="@+id/pay_method_text_view_card"
+        app:layout_constraintTop_toTopOf="@+id/pay_method_text_view_card" />
+
+    <View
+        style="@style/underline_style"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/pay_method_text_view_card" />
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        android:text="Добавить карту"
+        android:textAllCaps="false"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
