--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -18,12 +18,38 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">@color/black</item>
-        <item name="android:textSize">10sp</item>
+        <item name="android:textSize">40sp</item>
         <item name="android:maxLines">1</item>
         <item name="android:textColorHint">@color/colorAccent</item>
         <item name="android:padding">16dp</item>
         <item name="android:layout_margin">16dp</item>
         <item name="android:inputType">phone</item>
+    </style>
+
+    <style name="underline_style">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">1dp</item>
+        <item name="android:layout_marginStart">40dp</item>
+        <item name="android:layout_marginEnd">20dp</item>
+        <item name="android:background">@color/gray_400</item>
+    </style>
+
+    <style name="liner_layout_pay_method_style">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginTop">20dp</item>
+        <item name="android:orientation">horizontal</item>
+    </style>
+
+    <style name="text_view_pay_method_style">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:paddingTop">10dp</item>
+        <item name="android:paddingBottom">10dp</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:layout_marginStart">40dp</item>
+        <item name="android:layout_marginEnd">20dp</item>
+
     </style>
 
 </resources>
