--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -7,41 +7,72 @@
     tools:context=".ui.screens.ProfileFragment">
 
     <TextView
-        android:id="@+id/name_user"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="20sp"
-        android:text="Name"
-        android:textAlignment="center"
-        android:textSize="20sp"
+        android:id="@+id/profile_text_view_description_profile"
+        style="@style/text_view_upper_text"
+        android:text="@string/profile_text_view_description_profile_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/phone_user"
+        android:id="@+id/profile_name_user_text_view_description_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="20sp"
-        android:text="Phone"
-        android:textAlignment="center"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginVertical="20dp"
+        android:text="Имя"
+        android:textSize="15sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/profile_text_view_description_profile" />
+
+    <TextView
+        android:id="@+id/profile_name_user_text_view_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="20dp"
+        android:textColor="@color/black"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/name_user" />
+        app:drawableEndCompat="@drawable/ic_baseline_navigate_next_24"
+        app:layout_constraintTop_toBottomOf="@id/profile_name_user_text_view_description_name" />
+
+    <TextView
+        android:id="@+id/profile_phone_user_text_view_description_phone"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginVertical="20dp"
+        android:text="Телефона"
+        android:textSize="15sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/profile_name_user_text_view_name" />
+
+    <TextView
+        android:id="@+id/profile_phone_user_text_view_phone"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="20dp"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        app:drawableEndCompat="@drawable/ic_baseline_navigate_next_24"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/profile_phone_user_text_view_description_phone" />
 
     <TextView
         android:id="@+id/profile_exit_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="20sp"
-        android:text="Выйти"
-        android:textAlignment="center"
+        android:layout_margin="20dp"
+        android:padding="10sp"
         android:textColor="@color/md_red_600"
         android:textSize="20sp"
+        android:text="Выйти из профиля"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
