--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -49,7 +49,15 @@
         <item name="android:textSize">20sp</item>
         <item name="android:layout_marginStart">40dp</item>
         <item name="android:layout_marginEnd">20dp</item>
+    </style>
 
+    <style name="text_view_upper_text">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:layout_marginStart">20dp</item>
+        <item name="android:layout_marginEnd">20dp</item>
+        <item name="android:textSize">30sp</item>
     </style>
 
 </resources>
