--- a/app/src/main/res/layout/fragment_maps.xml
+++ b/app/src/main/res/layout/fragment_maps.xml
@@ -30,7 +30,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:text="Текст"
+            android:text="Куда едем ? "
             android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp"/>
 
