--- a/app/src/main/res/layout/fragment_maps.xml
+++ b/app/src/main/res/layout/fragment_maps.xml
@@ -8,12 +8,9 @@
     android:layout_width="match_parent"
     android:gravity="bottom"
     app:umanoPanelHeight="220dp"
-    app:umanoShadowHeight="200dp"
+    app:umanoShadowHeight="200dp">
 
-    >
-
-    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+    <fragment
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
@@ -25,20 +22,22 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <TextView
             android:id="@+id/text_test"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:text="Куда едем ? "
+            android:text="Укажите точку назначения"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp"/>
 
         <View
-            android:paddingLeft="8dp"
+            android:paddingStart="8dp"
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@color/gray_400"/>
+            android:background="@color/gray_400"
+            tools:ignore="RtlSymmetry" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -49,10 +48,9 @@
             <fragment
                 android:layout_weight="9"
                 android:id="@+id/autocomplete_fragment"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
-                />
+                android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"/>
         </LinearLayout>
     </LinearLayout>
 </com.sothree.slidinguppanel.SlidingUpPanelLayout>
