--- a/app/src/main/res/layout/fragment_maps.xml
+++ b/app/src/main/res/layout/fragment_maps.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <com.sothree.slidinguppanel.SlidingUpPanelLayout xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
@@ -7,8 +6,9 @@
     android:id="@+id/mapFragment"
     android:layout_width="match_parent"
     android:gravity="bottom"
-    app:umanoPanelHeight="220dp"
-    app:umanoShadowHeight="200dp">
+    app:umanoOverlay="true"
+    app:umanoPanelHeight="300dp"
+    app:umanoShadowHeight="0dp">
 
     <fragment
         android:id="@+id/map"
@@ -18,39 +18,58 @@
         tools:context=".ui.screens.MapsFragment" />
 
     <LinearLayout
-        android:background="@color/white"
+        android:id="@+id/liner"
+        android:layout_height="350dp"
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <TextView
-            android:id="@+id/text_test"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:text="Укажите точку назначения"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="20dp"/>
+        android:background="@drawable/search_map">
 
         <View
-            android:paddingStart="8dp"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/gray_400"
+            android:layout_width="40dp"
+            android:layout_height="5dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/line"
             tools:ignore="RtlSymmetry" />
 
-        <LinearLayout
+        <androidx.cardview.widget.CardView
+            style="@style/card_view_style"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <fragment
+                    android:layout_weight="9"
+                    android:id="@+id/autocomplete_fragment"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"/>
+
+                <View
+                    style="@style/underline_style"
+                    android:layout_margin="15dp" />
+
+                <fragment
+                    android:layout_weight="9"
+                    android:id="@+id/autocomplete_2_fragment"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"/>
+
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+
+        <Button
+            android:id="@+id/map_btn_create_ride"
+            android:text="Заказать"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:weightSum="10"
-            android:orientation="horizontal">
+            android:layout_marginHorizontal="20dp"
+            android:padding="20dp"/>
 
-            <fragment
-                android:layout_weight="9"
-                android:id="@+id/autocomplete_fragment"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"/>
-        </LinearLayout>
     </LinearLayout>
 </com.sothree.slidinguppanel.SlidingUpPanelLayout>
