--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -71,13 +71,34 @@
         <item name="android:layout_margin">20dp</item>
     </style>
 
-    <style name="search_view_style">
+    <style name="change_user_data_edt_text_style">
         <item name="android:padding">15dp</item>
         <item name="background">@drawable/background_edt_address</item>
-        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_width">250dp</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:inputType">text</item>
         <item name="android:backgroundTint">@android:color/transparent</item>
+        <item name="android:layout_margin">20dp</item>
+        <item name="android:textSize">30sp</item>
+        <item name="android:textAlignment">center</item>
     </style>
 
+    <style name="change_user_data_text_view_description_style">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_margin">20dp</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">20sp</item>
+    </style>
+
+    <style name="change_user_data_btn_style">
+        <item name="android:layout_margin">20dp</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">60dp</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:background">@drawable/change_user_data_btn_background</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
 </resources>
