--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -29,7 +29,7 @@
     <style name="underline_style">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">1dp</item>
-        <item name="android:layout_marginStart">40dp</item>
+        <item name="android:layout_marginStart">35dp</item>
         <item name="android:layout_marginEnd">20dp</item>
         <item name="android:background">@color/gray_400</item>
     </style>
@@ -42,13 +42,11 @@
     </style>
 
     <style name="text_view_pay_method_style">
-        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_width">250dp</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:paddingTop">10dp</item>
-        <item name="android:paddingBottom">10dp</item>
         <item name="android:textSize">20sp</item>
-        <item name="android:layout_marginStart">40dp</item>
-        <item name="android:layout_marginEnd">20dp</item>
+        <item name="android:padding">10dp</item>
+
     </style>
 
     <style name="text_view_upper_text">
@@ -129,5 +127,4 @@
         <item name="android:textSize">20sp</item>
         <item name="android:textColor">@color/black</item>
     </style>
-
 </resources>
